platform/projects/y/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 'y'
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    infra.fredrir.com/tier: project
