platform/projects/y/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: 'y'
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: 'y'
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: 'y'
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/part-of: 'y'
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/part-of: 'y'
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: fredrir-09
        kubernetes.io/arch: amd64
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: mongodb
        image: docker.io/library/mongo@sha256:4a0f30875898413139bec44c73c02a05fed172578de65b644dcdcee143ae7306
        args:
        - mongod
        - --bind_ip_all
        - --wiredTigerCacheSizeGB
        - '0.25'
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
          readOnlyRootFilesystem: true
          runAsUser: 999
          runAsGroup: 999
        ports:
        - name: mongodb
          containerPort: 27017
        resources:
          requests:
            cpu: 160m
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 1Gi
        volumeMounts:
        - name: database
          mountPath: /data/db
        - name: configdb
          mountPath: /data/configdb
        - name: tmp
          mountPath: /tmp
        - name: init
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
        readinessProbe:
          exec: &id001
            command:
            - mongosh
            - --quiet
            - --norc
            - --eval
            - 'quit(db.adminCommand({ping:1}).ok ? 0 : 1)'
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          exec: *id001
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
      volumes:
      - name: tmp
        emptyDir:
          sizeLimit: 64Mi
      - name: configdb
        emptyDir:
          sizeLimit: 16Mi
      - name: init
        configMap:
          name: mongodb-init
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      storageClassName: local-retain
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
