platform/projects/y/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: 'y'
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns
  namespace: 'y'
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-egress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mongodb
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-ingress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: api
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-egress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: api
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 3001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: web
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 3001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-ingress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cloudflared
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tunnel-egress
  namespace: 'y'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/part-of: 'y'
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: web
          app.kubernetes.io/part-of: 'y'
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - ipBlock:
        cidr: 198.41.192.0/24
    - ipBlock:
        cidr: 198.41.200.0/24
    ports:
    - protocol: TCP
      port: 7844
    - protocol: UDP
      port: 7844
